# ciph

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  ciph.c  ciph.h  ciph.sh  pyproject.toml  setup.py  test_ciph.sh
.github/workflows/: ciph-test.yml
ciph/: _build.c  cli.py  installation.py
