[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciph"
version = "1.2.1"
description = "High-performance streaming encryption engine for large files"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache License 2.0" }

authors = [
    { name = "Ankit Chaubey", email = "m.ankitchaubey@gmail.com" }
]

dependencies = [
    "tqdm>=4.60.0"
]

keywords = [
    "encryption",
    "cryptography",
    "security",
    "aes",
    "chacha20",
    "streaming",
    "files",
    "privacy",
    "libsodium"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Archiving :: Backup",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix"
]

[project.urls]
Homepage = "https://github.com/ankit-chaubey/ciph"
Source = "https://github.com/ankit-chaubey/ciph"
Issues = "https://github.com/ankit-chaubey/ciph/issues"

[project.scripts]
ciph = "ciph.cli:main"
